--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
+    "moment": "^2.30.1",
     "nodemon": "^3.1.0",
     "pg": "^8.11.5",
     "start": "^5.1.0"
