--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "express-session": "^1.18.0",
     "http": "^0.0.1-security",
     "moment": "^2.30.1",
-    "nodemon": "^3.1.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.5",
     "start": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
